--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "@aws-sdk/lib-dynamodb": "^3.714.0",
     "serverless-appsync-plugin": "^2.9.1",
     "serverless-iam-roles-per-function": "^3.2.0"
+  },
+  "dependencies": {
+    "uuid": "^11.0.3"
   }
 }
